--- a/Presensi/Presensi.csproj
+++ b/Presensi/Presensi.csproj
@@ -212,11 +212,29 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Admin.cs">
+    <Compile Include="admin\Admin.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Admin.Designer.cs">
+    <Compile Include="admin\Admin.Designer.cs">
       <DependentUpon>Admin.cs</DependentUpon>
+    </Compile>
+    <Compile Include="admin\jadwal_admin.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="admin\jadwal_admin.Designer.cs">
+      <DependentUpon>jadwal_admin.cs</DependentUpon>
+    </Compile>
+    <Compile Include="admin\karyawan_admin.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="admin\karyawan_admin.Designer.cs">
+      <DependentUpon>karyawan_admin.cs</DependentUpon>
+    </Compile>
+    <Compile Include="admin\presensi_admin.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="admin\presensi_admin.Designer.cs">
+      <DependentUpon>presensi_admin.cs</DependentUpon>
     </Compile>
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
@@ -224,28 +242,76 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
-    <Compile Include="Operator.cs">
+    <Compile Include="operator\jadwal_operator.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Operator.Designer.cs">
+    <Compile Include="operator\jadwal_operator.Designer.cs">
+      <DependentUpon>jadwal_operator.cs</DependentUpon>
+    </Compile>
+    <Compile Include="operator\karyawan_operator.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="operator\karyawan_operator.Designer.cs">
+      <DependentUpon>karyawan_operator.cs</DependentUpon>
+    </Compile>
+    <Compile Include="operator\Operator.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="operator\Operator.Designer.cs">
       <DependentUpon>Operator.cs</DependentUpon>
+    </Compile>
+    <Compile Include="operator\presensi_operator.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="operator\presensi_operator.Designer.cs">
+      <DependentUpon>presensi_operator.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="User.cs">
+    <Compile Include="user\jadwal_user.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="User.Designer.cs">
+    <Compile Include="user\jadwal_user.Designer.cs">
+      <DependentUpon>jadwal_user.cs</DependentUpon>
+    </Compile>
+    <Compile Include="user\presensi_user.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="user\presensi_user.Designer.cs">
+      <DependentUpon>presensi_user.cs</DependentUpon>
+    </Compile>
+    <Compile Include="user\User.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="user\User.Designer.cs">
       <DependentUpon>User.cs</DependentUpon>
     </Compile>
-    <EmbeddedResource Include="Admin.resx">
+    <EmbeddedResource Include="admin\Admin.resx">
       <DependentUpon>Admin.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="admin\jadwal_admin.resx">
+      <DependentUpon>jadwal_admin.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="admin\karyawan_admin.resx">
+      <DependentUpon>karyawan_admin.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="admin\presensi_admin.resx">
+      <DependentUpon>presensi_admin.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Operator.resx">
+    <EmbeddedResource Include="operator\jadwal_operator.resx">
+      <DependentUpon>jadwal_operator.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="operator\karyawan_operator.resx">
+      <DependentUpon>karyawan_operator.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="operator\Operator.resx">
       <DependentUpon>Operator.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="operator\presensi_operator.resx">
+      <DependentUpon>presensi_operator.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -257,7 +323,13 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
-    <EmbeddedResource Include="User.resx">
+    <EmbeddedResource Include="user\jadwal_user.resx">
+      <DependentUpon>jadwal_user.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="user\presensi_user.resx">
+      <DependentUpon>presensi_user.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="user\User.resx">
       <DependentUpon>User.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="packages.config" />
@@ -285,6 +357,12 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\wallhaven-j5gd7m.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\download %286%29.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\download %286%291.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\Microsoft.Data.SqlClient.SNI.5.1.1\build\net462\Microsoft.Data.SqlClient.SNI.targets" Condition="Exists('..\packages\Microsoft.Data.SqlClient.SNI.5.1.1\build\net462\Microsoft.Data.SqlClient.SNI.targets')" />
